--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "deploy": "gh-pages -d out"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.2",
     "clsx": "^2.1.1",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-redux": "^9.2.0",
     "sass": "^1.97.3",
     "tailwind-merge": "^3.4.0"
   },
